Fix Games List Hiding Behind ThisYear Section

--- a/src/pages/Home/sections/Header/Header.module.scss
+++ b/src/pages/Home/sections/Header/Header.module.scss
@@ -2,7 +2,7 @@
 
 .Header {
     width: 100vw;
-    min-height: 80rem;
+    min-height: 90rem;
     height: 100vh;
 
     // position: relative;
